--- a/.github/workflows/wilco-actions.yml
+++ b/.github/workflows/wilco-actions.yml
@@ -1,4 +1,7 @@
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   wilco:
@@ -27,25 +30,12 @@ jobs:
           working-directory: backend
           bundler-cache: true
 
+      - uses: oNaiPs/secrets-to-env-action@v1
+        with:
+          secrets: ${{ toJSON(secrets) }}
+
       - name: Wilco checks
         id: Wilco
         uses: trywilco/actions@main
         with:
-          owner: ${{ github.repository_owner }}
-  Lint:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-
-    defaults:
-      run:
-        working-directory: frontend
-    steps:
-      - name: Check out project
-        uses: actions/checkout@v2
-      - name: Lint code
-        uses: actions/setup-node@v1
-        with:
-          node-version: '16'
-          cache: 'yarn'
-      - run: yarn install
-      - run: yarn lint
+          engine: ${{ secrets.WILCO_ENGINE_URL }}
